--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ emplo_sat/reviews
 emplo_sat/data_collection
 emplo_sat/data_exploration/xy_lasso.pickle
 .DS_Store
+emplo_sat/data_exploration/text.pickle
+emplo_sat/data_exploration/text2.pickle
